@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-04-14T22:28:27Z",
-  "count" : 50,
-  "count_minmax" : [ 50, 50 ],
-  "count_decinc" : [ -0, +50 ],
+  "timestamp" : "2024-04-24T00:52:29Z",
+  "count" : 49,
+  "count_minmax" : [ 49, 50 ],
+  "count_decinc" : [ -1, +50 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
