@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-04-23T16:14:18Z",
-  "count_outdated" : 198930,
-  "uniques_outdated" : 2002,
-  "count" : 201835,
+  "timestamp" : "2024-04-24T00:52:29Z",
+  "count_outdated" : 198980,
+  "uniques_outdated" : 2003,
+  "count" : 201929,
   "uniques" : 2024,
   "clones" : [
     {
-      "timestamp": "2024-04-09T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 14, 50 ],
-      "count_decinc": [ 36, 50 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-04-10T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 50, 50 ],
-      "count_decinc": [ 0, 50 ],
+      "count": 49,
+      "count_minmax": [ 49, 50 ],
+      "count_decinc": [ 1, 50 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-04-23T00:00:00Z",
-      "count": 201,
-      "count_minmax": [ 110, 201 ],
-      "count_decinc": [ 0, 201 ],
+      "count": 295,
+      "count_minmax": [ 110, 295 ],
+      "count_decinc": [ 0, 295 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
