@@ -1,15 +1,10 @@
 {
-  "count": 2869,
+  "count": 2948,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-04-09T00:00:00Z",
-      "count": 14,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-04-10T00:00:00Z",
-      "count": 50,
+      "count": 49,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-04-23T00:00:00Z",
-      "count": 201,
+      "count": 295,
       "uniques": 1
     }
   ]
